Design: 메인화면 고정 overflow-x: hidden

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
     <style>
       body {
-        overflow-y: hidden;
+        overflow: hidden;
       }
     </style>
   </head>
