Design: 마이페이지 반응형, spinner 변경

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Kakao.init('f79493b1ae9c5befcbf8812d069bf54b');
 
       // SDK 초기화 여부를 판단합니다.
-      console.log(Kakao.isInitialized());
+      // console.log(Kakao.isInitialized());
     </script>
     <style>
       body {
