Docs: 구글 서치 meta 태그

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="ohDYcPY1r1OreOcUygYZ4FwDATA0xHaUMh56N30a6Qg" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>내일은 최저가</title>
